// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Full Width Size 1`] = `
<DocumentFragment>
  <button
    class="button button--visual_primary button--widthSize_full"
  >
    Sample Full Width Button
  </button>
</DocumentFragment>
`;

exports[`Button Medium Width Size 1`] = `
<DocumentFragment>
  <button
    class="button button--visual_primary button--widthSize_md"
  >
    Sample Medium Width Size Button
  </button>
</DocumentFragment>
`;

exports[`Button Primary 1`] = `
<DocumentFragment>
  <button
    class="button button--visual_primary button--widthSize_sm"
  >
    Sample Primary Button
  </button>
</DocumentFragment>
`;

exports[`Button Render Correctly 1`] = `
<DocumentFragment>
  <button
    class="button button--visual_primary button--widthSize_sm"
  >
    Sample Render Button
  </button>
</DocumentFragment>
`;

exports[`Button Render Correctly with all variants 1`] = `
<DocumentFragment>
  <button
    class="button button--visual_secondary button--widthSize_md"
  >
    Sample Click Render Button
  </button>
</DocumentFragment>
`;

exports[`Button Secondary 1`] = `
<DocumentFragment>
  <button
    class="button button--visual_secondary button--widthSize_sm"
  >
    Sample Secondary Button
  </button>
</DocumentFragment>
`;

exports[`Button Show Loading & Disabled State 1`] = `
<DocumentFragment>
  <button
    class="button button--visual_primary button--widthSize_sm"
    disabled=""
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      version="1.1"
      viewBox="0 0 17 17"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g />
      <path
        d="M6 8h-6v-6h1v4.109c1.013-3.193 4.036-5.484 7.5-5.484 3.506 0 6.621 2.36 7.574 5.739l-0.963 0.271c-0.832-2.95-3.551-5.011-6.611-5.011-3.226 0.001-6.016 2.276-6.708 5.376h4.208v1zM11 9v1h4.208c-0.693 3.101-3.479 5.375-6.708 5.375-3.062 0-5.78-2.061-6.611-5.011l-0.963 0.271c0.952 3.379 4.067 5.739 7.574 5.739 3.459 0 6.475-2.28 7.5-5.482v4.108h1v-6h-6z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button Small Width Size 1`] = `
<DocumentFragment>
  <button
    class="button button--visual_primary button--widthSize_sm"
  >
    Sample Small Width Size Button
  </button>
</DocumentFragment>
`;
